--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinepools.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinepools.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: dockermachinepools.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -25,18 +25,26 @@ spec:
     name: v1alpha4
     schema:
       openAPIV3Schema:
-        description: "DockerMachinePool is the Schema for the dockermachinepools API.
-          \n Deprecated: This type will be removed in one of the next releases."
+        description: |-
+          DockerMachinePool is the Schema for the dockermachinepools API.
+
+
+          Deprecated: This type will be removed in one of the next releases.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -57,24 +65,27 @@ spec:
                   machine within the Machine Pool
                 properties:
                   customImage:
-                    description: CustomImage allows customizing the container image
-                      that is used for running the machine
+                    description: |-
+                      CustomImage allows customizing the container image that is used for
+                      running the machine
                     type: string
                   extraMounts:
-                    description: ExtraMounts describes additional mount points for
-                      the node container These may be used to bind a hostPath
+                    description: |-
+                      ExtraMounts describes additional mount points for the node container
+                      These may be used to bind a hostPath
                     items:
-                      description: Mount specifies a host volume to mount into a container.
+                      description: |-
+                        Mount specifies a host volume to mount into a container.
                         This is a simplified version of kind v1alpha4.Mount types.
                       properties:
                         containerPath:
                           description: Path of the mount within the container.
                           type: string
                         hostPath:
-                          description: Path of the mount on the host. If the hostPath
-                            doesn't exist, then runtimes should report error. If the
-                            hostpath is a symbolic link, runtimes should follow the
-                            symlink and mount the real destination to container.
+                          description: |-
+                            Path of the mount on the host. If the hostPath doesn't exist, then runtimes
+                            should report error. If the hostpath is a symbolic link, runtimes should
+                            follow the symlink and mount the real destination to container.
                           type: string
                         readOnly:
                           description: If set, the mount is read-only.
@@ -82,9 +93,9 @@ spec:
                       type: object
                     type: array
                   preLoadImages:
-                    description: PreLoadImages allows to pre-load images in a newly
-                      created machine. This can be used to speed up tests by avoiding
-                      e.g. to download CNI images on all the containers.
+                    description: |-
+                      PreLoadImages allows to pre-load images in a newly created machine. This can be used to
+                      speed up tests by avoiding e.g. to download CNI images on all the containers.
                     items:
                       type: string
                     type: array
@@ -100,37 +111,37 @@ spec:
                     operational state.
                   properties:
                     lastTransitionTime:
-                      description: Last time the condition transitioned from one status
-                        to another. This should be when the underlying condition changed.
-                        If that is not known, then using the time when the API field
-                        changed is acceptable.
+                      description: |-
+                        Last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed. If that is not known, then using the time when
+                        the API field changed is acceptable.
                       format: date-time
                       type: string
                     message:
-                      description: A human readable message indicating details about
-                        the transition. This field may be empty.
+                      description: |-
+                        A human readable message indicating details about the transition.
+                        This field may be empty.
                       type: string
                     reason:
-                      description: The reason for the condition's last transition
-                        in CamelCase. The specific API may choose whether or not this
-                        field is considered a guaranteed API. This field may not be
-                        empty.
+                      description: |-
+                        The reason for the condition's last transition in CamelCase.
+                        The specific API may choose whether or not this field is considered a guaranteed API.
+                        This field may not be empty.
                       type: string
                     severity:
-                      description: Severity provides an explicit classification of
-                        Reason code, so the users or machines can immediately understand
-                        the current situation and act accordingly. The Severity field
-                        MUST be set only when Status=False.
+                      description: |-
+                        Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                        understand the current situation and act accordingly.
+                        The Severity field MUST be set only when Status=False.
                       type: string
                     status:
                       description: Status of the condition, one of True, False, Unknown.
                       type: string
                     type:
-                      description: Type of condition in CamelCase or in foo.example.com/CamelCase.
-                        Many .condition.type values are consistent across resources
-                        like Available, but because arbitrary conditions can be useful
-                        (see .node.status.conditions), the ability to deconflict is
-                        important.
+                      description: |-
+                        Type of condition in CamelCase or in foo.example.com/CamelCase.
+                        Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
+                        can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
                   - status
@@ -164,8 +175,9 @@ spec:
                         type: object
                       type: array
                     bootstrapped:
-                      description: Bootstrapped is true when the kubeadm bootstrapping
-                        has been run against this machine
+                      description: |-
+                        Bootstrapped is true when the kubeadm bootstrapping has been run
+                        against this machine
                       type: boolean
                     instanceName:
                       description: InstanceName is the identification of the Machine
@@ -213,14 +225,19 @@ spec:
         description: DockerMachinePool is the Schema for the dockermachinepools API.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -241,24 +258,27 @@ spec:
                   machine within the Machine Pool
                 properties:
                   customImage:
-                    description: CustomImage allows customizing the container image
-                      that is used for running the machine
+                    description: |-
+                      CustomImage allows customizing the container image that is used for
+                      running the machine
                     type: string
                   extraMounts:
-                    description: ExtraMounts describes additional mount points for
-                      the node container These may be used to bind a hostPath
+                    description: |-
+                      ExtraMounts describes additional mount points for the node container
+                      These may be used to bind a hostPath
                     items:
-                      description: Mount specifies a host volume to mount into a container.
+                      description: |-
+                        Mount specifies a host volume to mount into a container.
                         This is a simplified version of kind v1alpha4.Mount types.
                       properties:
                         containerPath:
                           description: Path of the mount within the container.
                           type: string
                         hostPath:
-                          description: Path of the mount on the host. If the hostPath
-                            doesn't exist, then runtimes should report error. If the
-                            hostpath is a symbolic link, runtimes should follow the
-                            symlink and mount the real destination to container.
+                          description: |-
+                            Path of the mount on the host. If the hostPath doesn't exist, then runtimes
+                            should report error. If the hostpath is a symbolic link, runtimes should
+                            follow the symlink and mount the real destination to container.
                           type: string
                         readOnly:
                           description: If set, the mount is read-only.
@@ -266,9 +286,9 @@ spec:
                       type: object
                     type: array
                   preLoadImages:
-                    description: PreLoadImages allows to pre-load images in a newly
-                      created machine. This can be used to speed up tests by avoiding
-                      e.g. to download CNI images on all the containers.
+                    description: |-
+                      PreLoadImages allows to pre-load images in a newly created machine. This can be used to
+                      speed up tests by avoiding e.g. to download CNI images on all the containers.
                     items:
                       type: string
                     type: array
@@ -284,37 +304,37 @@ spec:
                     operational state.
                   properties:
                     lastTransitionTime:
-                      description: Last time the condition transitioned from one status
-                        to another. This should be when the underlying condition changed.
-                        If that is not known, then using the time when the API field
-                        changed is acceptable.
+                      description: |-
+                        Last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed. If that is not known, then using the time when
+                        the API field changed is acceptable.
                       format: date-time
                       type: string
                     message:
-                      description: A human readable message indicating details about
-                        the transition. This field may be empty.
+                      description: |-
+                        A human readable message indicating details about the transition.
+                        This field may be empty.
                       type: string
                     reason:
-                      description: The reason for the condition's last transition
-                        in CamelCase. The specific API may choose whether or not this
-                        field is considered a guaranteed API. This field may not be
-                        empty.
+                      description: |-
+                        The reason for the condition's last transition in CamelCase.
+                        The specific API may choose whether or not this field is considered a guaranteed API.
+                        This field may not be empty.
                       type: string
                     severity:
-                      description: Severity provides an explicit classification of
-                        Reason code, so the users or machines can immediately understand
-                        the current situation and act accordingly. The Severity field
-                        MUST be set only when Status=False.
+                      description: |-
+                        Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                        understand the current situation and act accordingly.
+                        The Severity field MUST be set only when Status=False.
                       type: string
                     status:
                       description: Status of the condition, one of True, False, Unknown.
                       type: string
                     type:
-                      description: Type of condition in CamelCase or in foo.example.com/CamelCase.
-                        Many .condition.type values are consistent across resources
-                        like Available, but because arbitrary conditions can be useful
-                        (see .node.status.conditions), the ability to deconflict is
-                        important.
+                      description: |-
+                        Type of condition in CamelCase or in foo.example.com/CamelCase.
+                        Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
+                        can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
                   - lastTransitionTime
@@ -353,10 +373,13 @@ spec:
                         type: object
                       type: array
                     bootstrapped:
-                      description: "Bootstrapped is true when the kubeadm bootstrapping
-                        has been run against this machine \n Deprecated: This field
-                        will be removed in the next apiVersion. When removing also
-                        remove from staticcheck exclude-rules for SA1019 in golangci.yml"
+                      description: |-
+                        Bootstrapped is true when the kubeadm bootstrapping has been run
+                        against this machine
+
+
+                        Deprecated: This field will be removed in the next apiVersion.
+                        When removing also remove from staticcheck exclude-rules for SA1019 in golangci.yml
                       type: boolean
                     instanceName:
                       description: InstanceName is the identification of the Machine
