--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinepooltemplates.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinepooltemplates.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: dockermachinepooltemplates.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -28,14 +28,19 @@ spec:
           API.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -48,24 +53,27 @@ spec:
                   needed to create a DockerMachine from a template.
                 properties:
                   metadata:
-                    description: 'Standard object''s metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata'
+                    description: |-
+                      Standard object's metadata.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
                     properties:
                       annotations:
                         additionalProperties:
                           type: string
-                        description: 'Annotations is an unstructured key value map
-                          stored with a resource that may be set by external tools
-                          to store and retrieve arbitrary metadata. They are not queryable
-                          and should be preserved when modifying objects. More info:
-                          http://kubernetes.io/docs/user-guide/annotations'
+                        description: |-
+                          Annotations is an unstructured key value map stored with a resource that may be
+                          set by external tools to store and retrieve arbitrary metadata. They are not
+                          queryable and should be preserved when modifying objects.
+                          More info: http://kubernetes.io/docs/user-guide/annotations
                         type: object
                       labels:
                         additionalProperties:
                           type: string
-                        description: 'Map of string keys and values that can be used
-                          to organize and categorize (scope and select) objects. May
-                          match selectors of replication controllers and services.
-                          More info: http://kubernetes.io/docs/user-guide/labels'
+                        description: |-
+                          Map of string keys and values that can be used to organize and categorize
+                          (scope and select) objects. May match selectors of replication controllers
+                          and services.
+                          More info: http://kubernetes.io/docs/user-guide/labels
                         type: object
                     type: object
                   spec:
@@ -87,26 +95,27 @@ spec:
                           replica machine within the Machine Pool
                         properties:
                           customImage:
-                            description: CustomImage allows customizing the container
-                              image that is used for running the machine
+                            description: |-
+                              CustomImage allows customizing the container image that is used for
+                              running the machine
                             type: string
                           extraMounts:
-                            description: ExtraMounts describes additional mount points
-                              for the node container These may be used to bind a hostPath
+                            description: |-
+                              ExtraMounts describes additional mount points for the node container
+                              These may be used to bind a hostPath
                             items:
-                              description: Mount specifies a host volume to mount
-                                into a container. This is a simplified version of
-                                kind v1alpha4.Mount types.
+                              description: |-
+                                Mount specifies a host volume to mount into a container.
+                                This is a simplified version of kind v1alpha4.Mount types.
                               properties:
                                 containerPath:
                                   description: Path of the mount within the container.
                                   type: string
                                 hostPath:
-                                  description: Path of the mount on the host. If the
-                                    hostPath doesn't exist, then runtimes should report
-                                    error. If the hostpath is a symbolic link, runtimes
-                                    should follow the symlink and mount the real destination
-                                    to container.
+                                  description: |-
+                                    Path of the mount on the host. If the hostPath doesn't exist, then runtimes
+                                    should report error. If the hostpath is a symbolic link, runtimes should
+                                    follow the symlink and mount the real destination to container.
                                   type: string
                                 readOnly:
                                   description: If set, the mount is read-only.
@@ -114,10 +123,9 @@ spec:
                               type: object
                             type: array
                           preLoadImages:
-                            description: PreLoadImages allows to pre-load images in
-                              a newly created machine. This can be used to speed up
-                              tests by avoiding e.g. to download CNI images on all
-                              the containers.
+                            description: |-
+                              PreLoadImages allows to pre-load images in a newly created machine. This can be used to
+                              speed up tests by avoiding e.g. to download CNI images on all the containers.
                             items:
                               type: string
                             type: array
