--- a/test/infrastructure/inmemory/config/crd/bases/infrastructure.cluster.x-k8s.io_inmemorymachinetemplates.yaml
+++ b/test/infrastructure/inmemory/config/crd/bases/infrastructure.cluster.x-k8s.io_inmemorymachinetemplates.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: inmemorymachinetemplates.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -28,14 +28,19 @@ spec:
           template API.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -48,24 +53,27 @@ spec:
                   to create a InMemoryMachine from a template.
                 properties:
                   metadata:
-                    description: 'Standard object''s metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata'
+                    description: |-
+                      Standard object's metadata.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
                     properties:
                       annotations:
                         additionalProperties:
                           type: string
-                        description: 'Annotations is an unstructured key value map
-                          stored with a resource that may be set by external tools
-                          to store and retrieve arbitrary metadata. They are not queryable
-                          and should be preserved when modifying objects. More info:
-                          http://kubernetes.io/docs/user-guide/annotations'
+                        description: |-
+                          Annotations is an unstructured key value map stored with a resource that may be
+                          set by external tools to store and retrieve arbitrary metadata. They are not
+                          queryable and should be preserved when modifying objects.
+                          More info: http://kubernetes.io/docs/user-guide/annotations
                         type: object
                       labels:
                         additionalProperties:
                           type: string
-                        description: 'Map of string keys and values that can be used
-                          to organize and categorize (scope and select) objects. May
-                          match selectors of replication controllers and services.
-                          More info: http://kubernetes.io/docs/user-guide/labels'
+                        description: |-
+                          Map of string keys and values that can be used to organize and categorize
+                          (scope and select) objects. May match selectors of replication controllers
+                          and services.
+                          More info: http://kubernetes.io/docs/user-guide/labels
                         type: object
                     type: object
                   spec:
@@ -73,36 +81,28 @@ spec:
                       of the machine.
                     properties:
                       behaviour:
-                        description: Behaviour of the InMemoryMachine; this will allow
-                          to make a simulation more alike to real use cases e.g. by
-                          defining the duration of the provisioning phase mimicking
-                          the performances of the target infrastructure.
+                        description: |-
+                          Behaviour of the InMemoryMachine; this will allow to make a simulation more alike to real use cases
+                          e.g. by defining the duration of the provisioning phase mimicking the performances of the target infrastructure.
                         properties:
                           apiServer:
                             description: APIServer defines the behaviour of the APIServer
                               hosted on the InMemoryMachine.
                             properties:
                               provisioning:
-                                description: 'Provisioning defines variables influencing
-                                  how the APIServer hosted on the InMemoryMachine
-                                  is going to be provisioned. NOTE: APIServer provisioning
-                                  includes all the steps from starting the static
-                                  Pod to the Pod become ready and being registered
-                                  in K8s.'
+                                description: |-
+                                  Provisioning defines variables influencing how the APIServer hosted on the InMemoryMachine is going to be provisioned.
+                                  NOTE: APIServer provisioning includes all the steps from starting the static Pod to the Pod become ready and being registered in K8s.
                                 properties:
                                   startupDuration:
                                     description: StartupDuration defines the duration
                                       of the object provisioning phase.
                                     type: string
                                   startupJitter:
-                                    description: 'StartupJitter adds some randomness
-                                      on StartupDuration; the actual duration will
-                                      be StartupDuration plus an additional amount
-                                      chosen uniformly at random from the interval
-                                      between zero and `StartupJitter*StartupDuration`.
-                                      NOTE: this is modeled as string because the
-                                      usage of float is highly discouraged, as support
-                                      for them varies across languages.'
+                                    description: |-
+                                      StartupJitter adds some randomness on StartupDuration; the actual duration will be StartupDuration plus an additional
+                                      amount chosen uniformly at random from the interval between zero and `StartupJitter*StartupDuration`.
+                                      NOTE: this is modeled as string because the usage of float is highly discouraged, as support for them varies across languages.
                                     type: string
                                 required:
                                 - startupDuration
@@ -113,26 +113,19 @@ spec:
                               hosted on the InMemoryMachine.
                             properties:
                               provisioning:
-                                description: 'Provisioning defines variables influencing
-                                  how the etcd member hosted on the InMemoryMachine
-                                  is going to be provisioned. NOTE: Etcd provisioning
-                                  includes all the steps from starting the static
-                                  Pod to the Pod become ready and being registered
-                                  in K8s.'
+                                description: |-
+                                  Provisioning defines variables influencing how the etcd member hosted on the InMemoryMachine is going to be provisioned.
+                                  NOTE: Etcd provisioning includes all the steps from starting the static Pod to the Pod become ready and being registered in K8s.
                                 properties:
                                   startupDuration:
                                     description: StartupDuration defines the duration
                                       of the object provisioning phase.
                                     type: string
                                   startupJitter:
-                                    description: 'StartupJitter adds some randomness
-                                      on StartupDuration; the actual duration will
-                                      be StartupDuration plus an additional amount
-                                      chosen uniformly at random from the interval
-                                      between zero and `StartupJitter*StartupDuration`.
-                                      NOTE: this is modeled as string because the
-                                      usage of float is highly discouraged, as support
-                                      for them varies across languages.'
+                                    description: |-
+                                      StartupJitter adds some randomness on StartupDuration; the actual duration will be StartupDuration plus an additional
+                                      amount chosen uniformly at random from the interval between zero and `StartupJitter*StartupDuration`.
+                                      NOTE: this is modeled as string because the usage of float is highly discouraged, as support for them varies across languages.
                                     type: string
                                 required:
                                 - startupDuration
@@ -143,26 +136,19 @@ spec:
                               kubelet) hosted on the InMemoryMachine.
                             properties:
                               provisioning:
-                                description: 'Provisioning defines variables influencing
-                                  how the Node (the kubelet) hosted on the InMemoryMachine
-                                  is going to be provisioned. NOTE: Node provisioning
-                                  includes all the steps from starting kubelet to
-                                  the node become ready, get a provider ID, and being
-                                  registered in K8s.'
+                                description: |-
+                                  Provisioning defines variables influencing how the Node (the kubelet) hosted on the InMemoryMachine is going to be provisioned.
+                                  NOTE: Node provisioning includes all the steps from starting kubelet to the node become ready, get a provider ID, and being registered in K8s.
                                 properties:
                                   startupDuration:
                                     description: StartupDuration defines the duration
                                       of the object provisioning phase.
                                     type: string
                                   startupJitter:
-                                    description: 'StartupJitter adds some randomness
-                                      on StartupDuration; the actual duration will
-                                      be StartupDuration plus an additional amount
-                                      chosen uniformly at random from the interval
-                                      between zero and `StartupJitter*StartupDuration`.
-                                      NOTE: this is modeled as string because the
-                                      usage of float is highly discouraged, as support
-                                      for them varies across languages.'
+                                    description: |-
+                                      StartupJitter adds some randomness on StartupDuration; the actual duration will be StartupDuration plus an additional
+                                      amount chosen uniformly at random from the interval between zero and `StartupJitter*StartupDuration`.
+                                      NOTE: this is modeled as string because the usage of float is highly discouraged, as support for them varies across languages.
                                     type: string
                                 required:
                                 - startupDuration
@@ -173,24 +159,19 @@ spec:
                               the InMemoryMachine.
                             properties:
                               provisioning:
-                                description: 'Provisioning defines variables influencing
-                                  how the VM implementing the InMemoryMachine is going
-                                  to be provisioned. NOTE: VM provisioning includes
-                                  all the steps from creation to power-on.'
+                                description: |-
+                                  Provisioning defines variables influencing how the VM implementing the InMemoryMachine is going to be provisioned.
+                                  NOTE: VM provisioning includes all the steps from creation to power-on.
                                 properties:
                                   startupDuration:
                                     description: StartupDuration defines the duration
                                       of the object provisioning phase.
                                     type: string
                                   startupJitter:
-                                    description: 'StartupJitter adds some randomness
-                                      on StartupDuration; the actual duration will
-                                      be StartupDuration plus an additional amount
-                                      chosen uniformly at random from the interval
-                                      between zero and `StartupJitter*StartupDuration`.
-                                      NOTE: this is modeled as string because the
-                                      usage of float is highly discouraged, as support
-                                      for them varies across languages.'
+                                    description: |-
+                                      StartupJitter adds some randomness on StartupDuration; the actual duration will be StartupDuration plus an additional
+                                      amount chosen uniformly at random from the interval between zero and `StartupJitter*StartupDuration`.
+                                      NOTE: this is modeled as string because the usage of float is highly discouraged, as support for them varies across languages.
                                     type: string
                                 required:
                                 - startupDuration
